--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,22 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@300&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 
   font-family: "Open Sans", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-color: #060a19;
   background-image: url(./assets/bg-image.png);
   color: #ffffff;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
