--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2e2441;
+}
+
+::-webkit-scrollbar-thumb {
+  /* #A66BFF #1157FF */
+  background-image: linear-gradient(#a66bff, #1157ff);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.scroll-to-right::-webkit-scrollbar-thumb {
+  /* #A66BFF #1157FF */
+  background-image: linear-gradient(to right, #a66bff, #1157ff);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -38,4 +58,8 @@ code {
 .card-bg {
   background-color: #433a8b;
   border-radius: 1rem;
+}
+
+.custom-gradient {
+  background-image: linear-gradient(to right, #a66bff, #1157ff);
 }
