--- a/src/index.css
+++ b/src/index.css
@@ -56,8 +56,10 @@ code {
 }
 
 .card-bg {
-  background-color: #433a8b;
-  border-radius: 1rem;
+  /* background-color: #433a8b; */
+  /* border-radius: 1rem; */
+  background-image: url(./assets/button-bg.png);
+  background-size: 100% 100%;
 }
 
 .custom-gradient {
